--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,10 @@
 minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 future : true 
 # Site Settings
-locale                   : "en-US"
-title                    : "Site Title"
-title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
+locale                   : "ko-KR"
+title                    : "Goat In the Shell"
+title_separator          : "|"
+subtitle                 : "GameDevBlog"
 name                     : "Mighty Goat"
 description              : "An amazing website."
 url                      : "https://whoami121212.github.io"
