--- a/_config.yml
+++ b/_config.yml
@@ -104,10 +104,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "골방의 염소"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "인프런으로 개발조무사가 되어보자"
+  location         : "위례-판교 로밍 중"
   email            :
   links:
     - label: "Email"
