--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,10 @@
 # main links
 main:
   - title: "Category"
-    url: /categories/
+    url: /categories/  
+  - title: "Tag"
+    url: /tags/
+    
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
