--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ google:
 # SEO Related
 google_site_verification :
 bing_site_verification   :
-naver_site_verification  :
+naver_site_verification  : "a1a57e9cd0d1750c830be3f891c6998bd81a2914"
 yandex_site_verification :
 baidu_site_verification  :
 
