--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Goat In the Shell"
 title_separator          : "|"
 subtitle                 : "GameDevBlog"
 name                     : "Mighty Goat"
-description              : "An amazing website."
+description              : "방구석염소의 개발공부 블로그"
 url                      : "https://whoami121212.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
