--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name             : "골방의 염소"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/goatintheshell.png"
   bio              : "인프런으로 개발조무사가 되어보자"
   location         : "위례-판교 로밍 중"
   email            :
